--- a/views/moves/new.ejs
+++ b/views/moves/new.ejs
@@ -10,7 +10,7 @@
     <h1>Add New BJJ Move</h1>
 
     <div class="new-inputs">
-        <form action="/bjj" method="POST">
+        <form action="/move" method="POST">
             <input type="text" name="name" placeholder="Name of Move">
             <input type="text" name="position" placeholder="Position">
             <input type="text" name="movement" placeholder="Movement">
