--- a/views/moves/partials/head.ejs
+++ b/views/moves/partials/head.ejs
@@ -1,3 +1,4 @@
 <head>
+    <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/styles.css">
 </head>
