--- a/views/moves/newMove.ejs
+++ b/views/moves/newMove.ejs
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>New Movement</title>
+    <title>New Move</title>
 </head>
 <body>
-    <h1>Add New Movement</h1>
+    <h1>Add New Move</h1>
         <div class="new-inputs">
-            <form action="/movement" method="POST">
-                <input type="text" name="name" placeholder="Name of Movement">
-                <input type="text" name="img" placeholder="Image of Movement">
+            <form action="/move" method="POST">
+                <input type="text" name="name" placeholder="Name of Move">
+                <input type="text" name="img" placeholder="Image of Move">
                 <input type="checkbox" name="learned"/>
                 <input type="submit" value="Add" class="create-button">
             </form>
