--- a/views/moves/showMove.ejs
+++ b/views/moves/showMove.ejs
@@ -4,31 +4,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Show Movement</title>
+    <title>Show Move</title>
 </head>
 <body>
     <div class="banner">
-        <h1>BJJ Movement</h1>
+        <h1>BJJ Move</h1>
     </div>
 
     <div class="button-container">
-        <a href="/movements"><button>Back</button></a>
-        <a href="/movements/<%= movement._id %>/edit"><button>Edit</button></a>
+        <a href="/moves"><button>Back</button></a>
+        <a href="/moves/<%= move._id %>/edit"><button>Edit</button></a>
     </div>
 
     <div class="delete-button">
-        <form action="/movements/<%= movement._id %>?_method=delete" method="POST">
+        <form action="/movements/<%= move._id %>?_method=delete" method="POST">
         <input type="submit" value="Delete">
         </form>    
     </div>
 
     <div class="movement">
-        <p>Movement: <%= movement.name %></p>
-        <img src="<%= movement.img %>">   
+        <p>Move: <%= move.name %></p>
+        <img src="<%= move.img %>">   
     </div>
 
     <div class="learned">
-        <p>Learned: <%= movement.completed %></p>
+        <p>Learned: <%= move.completed %></p>
     </div>
 </body>
 </html>
