--- a/views/move/new.ejs
+++ b/views/move/new.ejs
@@ -11,8 +11,11 @@
         <div class="new-inputs">
             <form action="/move" method="POST">
                 <input type="text" name="name" placeholder="Name of Move">
-                <input type="text" name="img" placeholder="Image of Move">
+                <input type="text" name="type" placeholder="Type of Move">
+                <input type="text" name="description" placeholder="Description of Move">
+                <input type="text" name="points" placeholder="Move Points">
                 <input type="checkbox" name="learned"/>
+                <input type="text" name="img" placeholder="Image of Move">
                 <input type="submit" value="Add" class="create-button">
             </form>
         </div>
