--- a/views/move/edit.ejs
+++ b/views/move/edit.ejs
@@ -7,10 +7,13 @@
 </head>
 <body>
     <h2>Edit Move</h2>
-        <form action="/movement/<%= move._id %>?_method=put" method="POST">
+        <form action="/move/<%= move._id %>?_method=put" method="POST">
             <input type="text" name="name" placeholder="Name of Move" value="<%= move.name %>"/>
+            <input type="text" name="type" placeholder="Type of Move" value="<%= move.type %>"/>
+            <input type="text" name="description" placeholder="Description of Move" value="<%= move.description %>"/>
+            <input type="text" name="points" placeholder="Move Points" value="<%= move.points %>"/>
             <input type="text" name="img" placeholder="Image of Move" value="<%= move.img %>"/>
-            <input type="submit" value="Update Movement"/>
+            <input type="submit" value="Add Move"/>
         </form>
 </body>
 </html>
