--- a/views/move/partials/head.ejs
+++ b/views/move/partials/head.ejs
@@ -1,4 +1,30 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>MoveOn</title>
+    <!-- Linking jQuery -->
     <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
+    <!-- Linking CSS -->
     <link rel="stylesheet" href="/styles.css">
+   
 </head>
+<body>
+    <nav class="navbar">
+        <div class="title">
+            <h1>MoveOn</h1>
+        </div>
+        <div class="search-bar">
+            <input type="search" placeholder="Search">
+            <button>Search</button>
+        </div>
+        <ul>
+            <li><a href="#">Dropdown 1</a></li>
+            <li><a href="#">Dropdown 2</a></li>
+            <li><a href="#">Dropdown 3</a></li>
+        </ul>
+    </nav>
+</body>
+</html>
+</html>
