--- a/views/move/show.ejs
+++ b/views/move/show.ejs
@@ -1,34 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-    <%- include('../partials/head.ejs') %>
+    <%- include('./partials/head.ejs') %>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Show Move</title>
+    <title>Show Moves</title>
 </head>
 <body>
     <div class="banner">
-        <h1>BJJ Move</h1>
+        <h1>All Moves</h1>
     </div>
 
     <div class="button-container">
-        <a href="/moves"><button>Back</button></a>
-        <a href="/moves/<%= move._id %>/edit"><button>Edit</button></a>
+        <a href="/move"><button>Back</button></a>
+        <a href="/move/<%= move._id %>/edit"><button>Edit</button></a>
     </div>
 
     <div class="delete-button">
-        <form action="/movements/<%= move._id %>?_method=delete" method="POST">
+        <form action="/move/<%= move._id %>?_method=delete" method="POST">
         <input type="submit" value="Delete">
         </form>    
     </div>
 
-    <div class="movement">
+    <div class="name">
         <p>Move: <%= move.name %></p>
-        <img src="<%= move.img %>">   
+    </div>
+
+    <div class="column">
+        <div class="type">
+            <p>Type: <%= move.type %></p>
+        </div>
+    </div>
+
+    <div class="description">
+        <p>Description: <%= move.description %></p>
+    </div>
+
+    <div class="points">
+        <p>Points: <%= move.points %></p>
     </div>
 
     <div class="learned">
-        <p>Learned: <%= move.completed %></p>
+        <p>Learned: <%= move.completed ? 'Yes' : 'No' %></p>
+    </div>
+
+    <div class="img">
+        <img src="<%= move.img %>">
     </div>
 </body>
 </html>
