--- a/public/styles.css
+++ b/public/styles.css
@@ -23,36 +23,93 @@
 
 /* Navbar */
 .navbar {
+    background-color: #484848;
+    overflow: hidden;
+    display: flex;
+    justify-content: space-between;
+}
+  
+.navbar a {
+    color: #f2f2f2;
+    padding: 20px 16px;
+    text-decoration: none;
+    font-size: 17px;
+}
+
+.home {
+    color: #f2f2f2;
+    padding: 14px 18px;
+    text-decoration: none;
+    font-size: 25px;
+    font-style: italic;
+}
+
+.navbar a:hover {
+    background-color: #ddd;
+    color: rgb(98, 94, 94);
+}
+  
+.toggle-button {
+    position: absolute;
+    top: .75rem;
+    right: 1rem;
+    display: none;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 30px;
+    height: 21px;
+  }
+  
+  .toggle-button .bar {
+    height: 3px;
+    width: 100%;
+    background-color: whitesmoke;
+    border-radius: 10px;
+  }
+
+.nav-container {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.navbar .nav-links {
     display: flex;
     justify-content: space-around;
-    background-color: #333;
-    color: #fff;
-    padding: 1em 0;
+    width: 60%;
 }
 
-.navbar ul {
-    list-style: none;
-    display: flex;
-}
-
-.navbar li {
-    margin: 0 1em;
-}
-
-.navbar .title {
-    flex-grow: 1;
-}
-
-.navbar .title h1 {
-    font-size: 2em;  
-    font-style: italic; 
-}
-
-.navbar .search-bar {
-    display: flex;
-    align-items: center;
-}
-
-.navbar input[type="search"] {
-    margin-right: 1em;
-}
+/* Media query */
+  @media (max-width: 600px) {
+    .toggle-button {
+      display: flex;
+    }
+  
+    .navbar-links {
+      display: none;
+      width: 100%;
+    }
+  
+    .navbar {
+      flex-direction: column;
+      align-items: flex-start;
+    }
+  
+    .navbar-links ul {
+      width: 100%;
+      flex-direction: column;
+    }
+  
+    .navbar-links li {
+      text-align: center;
+    }
+  
+    .navbar-links li a {
+      padding: .5rem 1rem;
+    }
+  
+    .navbar-links.active {
+      display: flex;
+    }
+  }
+  
