--- a/public/styles.css
+++ b/public/styles.css
@@ -27,8 +27,14 @@
     overflow: hidden;
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
-  
+
+.nav-right {
+    display: flex;
+    justify-content: flex-end;
+}
+
 .navbar a {
     color: #f2f2f2;
     padding: 20px 16px;
@@ -77,6 +83,7 @@
     display: flex;
     justify-content: space-around;
     width: 60%;
+    margin-left: auto;
 }
 
 /* Media query */
