--- a/views/move/partials/head.ejs
+++ b/views/move/partials/head.ejs
@@ -8,27 +8,20 @@
     <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
     <!-- Linking CSS -->
     <link rel="stylesheet" href="/styles.css">
-   
 </head>
 <body>
     <div class="navbar">
-        <div class="home" href="#home">MoveOn</div>
-        <div class="nav-container">
-         <a href="#" class="toggle-button">
-                <span class="bar"></span>
-                <span class="bar"></span>
-                <span class="bar"></span>
-              </a>
-            <div class="nav-links">
-                <a class="nav-link" href="https://github.com/yunapahk/bjj/">Github</a>
-                <a href="#submissions">Submissions</a>
-                <a href="#movements">Movements</a>
+        <a class="home" href="#home">MoveOn</a>
+        <div class="nav-links">
+            <div class="dropdown">
                 <a href="#positions">Positions</a>
-            </div>
+                <a href="#movements">Movements</a>
+                <a href="#submissions">Submissions</a>
+                <a class="nav-link" href="https://github.com/yunapahk/bjj/">Github</a>
+            </div>    
         </div>
     </div>
 </body>
-
 <script>
     $(document).ready(function(){
         $('.menu-icon').click(function(){
