--- a/views/move/partials/head.ejs
+++ b/views/move/partials/head.ejs
@@ -11,14 +11,39 @@
 </head>
 <body>
     <div class="navbar">
-        <a class="home" href="#home">MoveOn</a>
-        <div class="nav-links">
+        <a href="#home">MoveOn</a>
+        <div class="dropdowns">
             <div class="dropdown">
-                <a href="#positions">Positions</a>
-                <a href="#movements">Movements</a>
-                <a href="#submissions">Submissions</a>
-                <a class="nav-link" href="https://github.com/yunapahk/bjj/">Github</a>
-            </div>    
+                <button class="dropbtn">Positions
+                    <i class="fa fa-caret-down"></i>
+                </button>
+                <div class="dropdown-content">
+                    <a href="#">Link 1</a>
+                    <a href="#">Link 2</a>
+                    <a href="#">Link 3</a>
+                </div>
+            </div>
+            <div class="dropdown">
+                <button class="dropbtn">Movements
+                    <i class="fa fa-caret-down"></i>
+                </button>
+                <div class="dropdown-content">
+                    <a href="#">Link 1</a>
+                    <a href="#">Link 2</a>
+                    <a href="#">Link 3</a>
+                </div>
+            </div>
+            <div class="dropdown">
+                <button class="dropbtn">Submissions
+                    <i class="fa fa-caret-down"></i>
+                </button>
+                <div class="dropdown-content">
+                    <a href="#">Link 1</a>
+                    <a href="#">Link 2</a>
+                    <a href="#">Link 3</a>
+                </div>
+            </div>
+            <a class="nav-link" href="https://github.com/yunapahk/bjj/">Github</a>
         </div>
     </div>
 </body>
