--- a/public/styles.css
+++ b/public/styles.css
@@ -21,69 +21,76 @@
     box-shadow: 0 10px 20px -5px #777;
 }
 
-/* Navbar */
+/* Navbar container */
 .navbar {
-    background-color: #484848;
-    overflow: hidden;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  overflow: hidden;
+  background-color: #333;
+  font-family: Arial;
 }
 
-.nav-right {
-    display: flex;
-    justify-content: flex-end;
-}
-
+/* Links inside the navbar */
 .navbar a {
-    color: #f2f2f2;
-    padding: 20px 16px;
-    text-decoration: none;
-    font-size: 17px;
+  float: left;
+  font-size: 16px;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
 }
 
-.home {
-    color: #f2f2f2;
-    padding: 14px 18px;
-    text-decoration: none;
-    font-size: 25px;
-    font-style: italic;
+/* The dropdown container */
+.dropdown {
+  float: left;
+  overflow: hidden;
 }
 
-.navbar a:hover {
-    background-color: #ddd;
-    color: rgb(98, 94, 94);
-}
-  
-.toggle-button {
-    position: absolute;
-    top: .75rem;
-    right: 1rem;
-    display: none;
-    flex-direction: column;
-    justify-content: space-between;
-    width: 30px;
-    height: 21px;
-  }
-  
-  .toggle-button .bar {
-    height: 3px;
-    width: 100%;
-    background-color: whitesmoke;
-    border-radius: 10px;
-  }
-
-.nav-container {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
+/* Dropdown button */
+.dropdown .dropbtn {
+  font-size: 16px;
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit; /* Important for vertical align on mobile phones */
+  margin: 0; /* Important for vertical align on mobile phones */
 }
 
-.navbar .nav-links {
-    display: flex;
-    justify-content: space-around;
-    width: 60%;
-    margin-left: auto;
+/* Color on hover */
+.navbar a:hover, .dropdown:hover .dropbtn {
+  background-color: red;
+}
+
+/* Dropdown content (hidden by default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+/* Add a grey background color to dropdown links on hover */
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+  display: block;
 }
 
 /* Media query */
