OAuth almost done

--- a/views/move/index.ejs
+++ b/views/move/index.ejs
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <p><%= user %></p>
+    <a href="/user/logout"><button>Logout</button></a>
+    
     <div class="create-button">
         <a href="move/new"><button>Add New Move</button></a>
     </div>
