--- a/public/styles.css
+++ b/public/styles.css
@@ -1,69 +1,75 @@
 * {
-    font-family: Arial, Helvetica, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: #373737;
 }
 
-/* For each 'card' */
 .index-container {
-    position: relative;
-    width: 50%;
-    height: 80%;
-    overflow: hidden;
-    box-shadow: 0 10px 20px -5px #ccc;
+  position: relative;
+  width: 50%;
+  height: 80%;
+  overflow: hidden;
+  box-shadow: 0 10px 20px -5px #ccc;
 }
 
-/* Gifs */
 .static {
-    position: relative;
-    box-shadow: 0 10px 20px -5px #ccc;
+  position: relative;
+  box-shadow: 0 10px 20px -5px #ccc;
 }
 
 .static:hover {
-    box-shadow: 0 10px 20px -5px #777;
+  box-shadow: 0 10px 20px -5px #777;
 }
 
-/* Navbar container */
 .navbar {
+  position: relative;
   display: flex;
   justify-content: space-between;
-  overflow: hidden;
-  background-color: #333;
-  font-family: Arial;
+  align-items: center;
+  background-color: #7a7575;
+  padding: 0 20px;
+  box-shadow: 2px solid black;
 }
 
-/* Links inside the navbar */
 .navbar a {
   float: left;
-  font-size: 16px;
+  font-size: 25px;
+  font-style: italic;
+  font-weight: bold;
   color: white;
   text-align: center;
-  padding: 14px 16px;
+  padding: 14px 5px;
   text-decoration: none;
+  background-color: #7a7575;
 }
 
-/* The dropdown container */
+.navbar-links {
+  display: flex;
+  position: absolute;
+  right: 0;
+  background-color: #ffffff;
+  width: auto;
+}
+
 .dropdown {
   float: left;
   overflow: hidden;
 }
 
-/* Dropdown button */
 .dropdown .dropbtn {
   font-size: 16px;
   border: none;
   outline: none;
   color: white;
   padding: 14px 16px;
-  background-color: inherit;
-  font-family: inherit; /* Important for vertical align on mobile phones */
-  margin: 0; /* Important for vertical align on mobile phones */
+  background-color: #7a7575;
+  font-family: inherit;
+  margin: 0;
 }
 
-/* Color on hover */
 .navbar a:hover, .dropdown:hover .dropbtn {
   background-color: red;
 }
 
-/* Dropdown content (hidden by default) */
 .dropdown-content {
   display: none;
   position: absolute;
@@ -73,57 +79,118 @@
   z-index: 1;
 }
 
-/* Links inside the dropdown */
 .dropdown-content a {
   float: none;
-  color: black;
+  color: rgb(255, 255, 255);
   padding: 12px 16px;
   text-decoration: none;
   display: block;
   text-align: left;
 }
 
-/* Add a grey background color to dropdown links on hover */
 .dropdown-content a:hover {
   background-color: #ddd;
 }
 
-/* Show the dropdown menu on hover */
 .dropdown:hover .dropdown-content {
   display: block;
 }
 
-/* Media query */
-  @media (max-width: 600px) {
-    .toggle-button {
-      display: flex;
-    }
-  
-    .navbar-links {
-      display: none;
-      width: 100%;
-    }
-  
-    .navbar {
-      flex-direction: column;
-      align-items: flex-start;
-    }
-  
-    .navbar-links ul {
-      width: 100%;
-      flex-direction: column;
-    }
-  
-    .navbar-links li {
-      text-align: center;
-    }
-  
-    .navbar-links li a {
-      padding: .5rem 1rem;
-    }
-  
-    .navbar-links.active {
-      display: flex;
-    }
+.hamburger-menu {
+  display: none;
+  flex-direction: column;
+  justify-content: space-around;
+  width: 2rem;
+  height: 2rem;
+  background: transparent;
+  border: none;
+  cursor: pointer;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.hamburger-menu div {
+  width: 2rem;
+  height: 0.25rem;
+  background: white;
+  border-radius: 10px;
+  transition: all 0.3s linear;
+  position: relative;
+}
+
+.hamburger-menu.open div:first-child {
+  transform: rotate(45deg);
+  position: relative;
+  top: 0.75rem;
+}
+
+.hamburger-menu.open div:nth-child(2) {
+  opacity: 0;
+}
+
+.hamburger-menu.open div:last-child {
+  transform: rotate(-45deg);
+  position: relative;
+  bottom: 0.75rem;
+}
+
+/* Normal nav links */
+.navbar .dropdown, .navbar .nav-link {
+  display: block;
+}
+
+/* Style for GitHub link */
+.navbar .github-link {
+  font-size: 16px;
+  padding: 14px 16px 14px 14px;
+  color: white;
+  text-decoration: none;
+  font-weight: lighter;
+  font-style: normal;
+}
+
+@media (max-width: 600px) {
+  /* Hide normal nav links and display hamburger menu */
+  .navbar .dropdown, .navbar .nav-link {
+    display: none;
   }
-  
+  .navbar-links:not(.active) {
+    display: none;
+  }
+  .navbar-links.active {
+   display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    width: 100%;
+  }
+  .navbar-links a, .dropdown .dropbtn, .github-link {
+    text-align: right;
+    padding: 10px 20px;
+    display: block;
+    width: 100%;
+  }
+  .hamburger-menu {
+    display: flex;
+  }
+  .hamburger-menu div {
+    width: 2rem;
+    height: 0.25rem;
+    background: white;
+    border-radius: 10px;
+    transition: all 0.3s linear;
+    position: relative;
+  }
+  .hamburger-menu.open div:first-child {
+    transform: rotate(45deg);
+    position: relative;
+    top: 0.65rem;
+  }
+  .hamburger-menu.open div:nth-child(2) {
+    opacity: 0;
+  }
+  .hamburger-menu.open div:last-child {
+    transform: rotate(-45deg);
+    position: relative;
+    bottom: 0.65rem;
+  }
+}
