--- a/public/new.css
+++ b/public/new.css
@@ -1,5 +1,72 @@
+body {
+    height: 100vh;
+    margin: 0;
+}
+
+h1 {
+    color: rgb(167, 163, 163);
+    font-style: italic;
+    padding: 20px 20px;
+    font-size: 25px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.new-container {
+    border: #fff 3px solid;
+    background-color: whitesmoke;
+    box-shadow: 3px #161616;
+    border-radius: 10px;
+    margin: 0 auto;
+    width: 50%;
+    height: 55vh;
+}
+  
 .form-inputs {
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    gap: 20px;
+    align-items: center;
+    justify-content: center;
+    background-color: whitesmoke;
+    padding-top: 30px;
 }
+  
+
+input[type="text"] {
+    width: 90%;
+    padding: 10px;
+    border-radius: 5px;
+    border: 1px solid #383838;
+    background-color: whitesmoke;
+    color: #9b9898;
+}
+
+input[type="checkbox"] {
+    width: 20px;
+}
+
+.add-btn {
+    display: inline-block;
+    width: 150px;
+    font-size: 1em;
+    background-color: rgb(0, 127, 246);
+    border-radius: 8px;
+    border-color: royalblue;
+    height: 40px;
+  }
+  
+  .fa-circle-arrow-left {
+    display: inline-block;
+    vertical-align: middle;
+    padding-left: 20px;
+    font-size: 50px;
+    color: whitesmoke;
+    padding-top: 20px;
+  }
+
+  .fa-caret-down {
+    background-color: #f0a925;
+  }
+  
