--- a/public/user.css
+++ b/public/user.css
@@ -20,15 +20,12 @@
     color: whitesmoke;
 }
 
-.btn-container {
-    margin-bottom: 20px; 
+.button-container {
+    padding-top: 180px;
     border: #fff 3px solid;
     background-color: whitesmoke;
     border-radius: 10px;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 0 auto;
     width: 50%;
     height: 30vh;
-    padding-left: 50px;
-    padding-top: 30px;
 }
