--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,14 +2,18 @@
 <html lang="en">
 <%- include('./move/partials/head.ejs') %>
 <head>
-    <link rel="stylesheet" href="/user.css">
+    <link rel="stylesheet" href="/login.css">
+    <!-- Linking Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-REjxEn8sgD7uNQIt5faY7HHk4Zgg1Jr7GJUdjqTmElMdTKjsfK/b/iKYbUKRA7nulm5K8zmGTLakjvsRHrZgrw==" crossorigin="anonymous" />
 </head>
     <body>
-            <main>
-                <div>
-                    <a href="/user/signup"><button>Sign Up</button></a>
-                    <a href="/user/login"><button>Login</button></a>
-                </div>
-            </main>
+        <br>
+        <br>
+        <br>
+        <br>
+        <div class="btn-container">
+            <a href="/user/signup"><button class="sign-up-button">Sign Up</button></a>
+            <a href="/user/login"><button class="login-button">Login</button></a>
+        </div>
     </body>
 </html>
