--- a/views/move/partials/head.ejs
+++ b/views/move/partials/head.ejs
@@ -7,13 +7,13 @@
     <!-- Linking jQuery -->
     <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
     <!-- Linking CSS -->
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="/head.css">
     <!-- Linking Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-REjxEn8sgD7uNQIt5faY7HHk4Zgg1Jr7GJUdjqTmElMdTKjsfK/b/iKYbUKRA7nulm5K8zmGTLakjvsRHrZgrw==" crossorigin="anonymous" />
 </head>
 <body>
     <div class="navbar">
-        <a href="#home">MoveOn</a>
+        <a href="/move ">MoveOn</a>
         <div class="hamburger-menu">
             <div></div>
             <div></div>
@@ -50,7 +50,9 @@
                     <a href="#">Link 3</a>
                 </div>
             </div>
-            <a class="nav-link github-link" href="https://github.com/yunapahk/bjj/">Github</a>
+            <a class="nav-link" href="https://github.com/yunapahk/bjj/">
+                <i class="fa-brands fa-square-github" style="color: #f0a925;"></i>
+              </a>
         </div>
     </div>
 </body>
